--- a/AMCO/club.html
+++ b/AMCO/club.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" >
   <link rel="stylesheet" href="/Style/style.css">
+
+
   <title>Amicale Motos Cyclos Occitanie</title>
-  <meta name="description" content="Retrouvez tous les évènements organisés par les membres de l'équipe de l'Amicale Motos Cyclos Occitanie. Une association de Moto-cross et Vélo basée dans l'Ariège"/>
+  <meta name="description" content="cette page traite des différentes informations du club de l'Amicale Motos Cyclos Occitanie. Une association de Moto-cross et Vélo basée dans l'Ariège"/>
 </head>
 <body class="d-flex flex-column">
   <div class="content" id="content">
@@ -27,14 +29,14 @@
         <div class="collapse navbar-collapse py-2" id="navbar_content">
           <ul class="navbar-nav nav-fill">
             <li class="nav-item ">
-              <a class="nav-link" href="/Index/accueil.html">
+              <a class="nav-link" href="/AMCO/index.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewbox="0 0 16 16">
                   <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
                 </svg> Accueil
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Index/evenement.html"> 
+              <a class="nav-link" href="/AMCO/evenement.html"> 
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar3-event text-success" viewbox="0 0 16 16">
                   <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
                   <path d="M12 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
@@ -42,27 +44,27 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Index/club.html">
+              <a class="nav-link active disabled text-warning" aria-current="page" href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bicycle " viewbox="0 0 16 16">
                   <path d="M4 4.5a.5.5 0 0 1 .5-.5H6a.5.5 0 0 1 0 1v.5h4.14l.386-1.158A.5.5 0 0 1 11 4h1a.5.5 0 0 1 0 1h-.64l-.311.935.807 1.29a3 3 0 1 1-.848.53l-.508-.812-2.076 3.322A.5.5 0 0 1 8 10.5H5.959a3 3 0 1 1-1.815-3.274L5 5.856V5h-.5a.5.5 0 0 1-.5-.5zm1.5 2.443-.508.814c.5.444.85 1.054.967 1.743h1.139L5.5 6.943zM8 9.057 9.598 6.5H6.402L8 9.057zM4.937 9.5a1.997 1.997 0 0 0-.487-.877l-.548.877h1.035zM3.603 8.092A2 2 0 1 0 4.937 10.5H3a.5.5 0 0 1-.424-.765l1.027-1.643zm7.947.53a2 2 0 1 0 .848-.53l1.026 1.643a.5.5 0 1 1-.848.53L11.55 8.303z"/>
                 </svg> Le club
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active disabled text-warning" aria-current="page" href="#">
+              <a class="nav-link" href="/AMCO/photos.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-images" viewbox="0 0 16 16">
                   <path d="M4.502 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
                   <path d="M14.002 13a2 2 0 0 1-2 2h-10a2 2 0 0 1-2-2V5A2 2 0 0 1 2 3a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v8a2 2 0 0 1-1.998 2zM14 2H4a1 1 0 0 0-1 1h9.002a2 2 0 0 1 2 2v7A1 1 0 0 0 15 11V3a1 1 0 0 0-1-1zM2.002 4a1 1 0 0 0-1 1v8l2.646-2.354a.5.5 0 0 1 .63-.030l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094l1.777 1.947V5a1 1 0 0 0-1-1h-10z"/>
                 </svg> Photos
               </a>
             </li>
-            <li class="nav-item dropdown ">
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-archive" viewbox="0 0 16 16">
                 <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
                 </svg> Archives</a>
                 <ul class="dropdown-menu bg-dark pt-0" id="dropdown_archives">
-                  <li><a class="dropdown-item bg-dark text-white text-center" href="/Index/Archives/2016-2018.html">2016 - 2018</a></li>
-                  <li><a class="dropdown-item bg-dark text-white text-center" href="/Index/Archives/2011-2015.html">2011 - 2015</a></li>
+                  <li><a class="dropdown-item bg-dark text-white text-center" href="/AMCO/Archives/2016-2018.html">2016 - 2018</a></li>
+                  <li><a class="dropdown-item bg-dark text-white text-center" href="/AMCO/Archives/2011-2015.html">2011 - 2015</a></li>
                 </ul>
             </li>
           </ul>
@@ -74,14 +76,14 @@
         <h2 class="text-center">Menu</h2>
         <ul class="list-unstyled mt-5">
             <li class="nav-item ">
-              <a class="nav-link" href="/Index/accueil.html">
+              <a class="nav-link" href="/AMCO/index.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewbox="0 0 16 16">
                   <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
                 </svg> Accueil
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Index/evenement.html"> 
+              <a class="nav-link" href="/AMCO/evenement.html"> 
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar3-event text-success" viewbox="0 0 16 16">
                   <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
                   <path d="M12 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
@@ -89,14 +91,14 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link"  href="/Index/club.html">
+              <a class="nav-link active disabled text-warning" aria-current="page" href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bicycle " viewbox="0 0 16 16">
                   <path d="M4 4.5a.5.5 0 0 1 .5-.5H6a.5.5 0 0 1 0 1v.5h4.14l.386-1.158A.5.5 0 0 1 11 4h1a.5.5 0 0 1 0 1h-.64l-.311.935.807 1.29a3 3 0 1 1-.848.53l-.508-.812-2.076 3.322A.5.5 0 0 1 8 10.5H5.959a3 3 0 1 1-1.815-3.274L5 5.856V5h-.5a.5.5 0 0 1-.5-.5zm1.5 2.443-.508.814c.5.444.85 1.054.967 1.743h1.139L5.5 6.943zM8 9.057 9.598 6.5H6.402L8 9.057zM4.937 9.5a1.997 1.997 0 0 0-.487-.877l-.548.877h1.035zM3.603 8.092A2 2 0 1 0 4.937 10.5H3a.5.5 0 0 1-.424-.765l1.027-1.643zm7.947.53a2 2 0 1 0 .848-.53l1.026 1.643a.5.5 0 1 1-.848.53L11.55 8.303z"/>
                 </svg> Le club
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active disabled text-warning" aria-current="page" href="#">
+              <a class="nav-link" href="/AMCO/photos.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-images" viewbox="0 0 16 16">
                   <path d="M4.502 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
                   <path d="M14.002 13a2 2 0 0 1-2 2h-10a2 2 0 0 1-2-2V5A2 2 0 0 1 2 3a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v8a2 2 0 0 1-1.998 2zM14 2H4a1 1 0 0 0-1 1h9.002a2 2 0 0 1 2 2v7A1 1 0 0 0 15 11V3a1 1 0 0 0-1-1zM2.002 4a1 1 0 0 0-1 1v8l2.646-2.354a.5.5 0 0 1 .63-.030l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094l1.777 1.947V5a1 1 0 0 0-1-1h-10z"/>
@@ -108,8 +110,8 @@
                 <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
                 </svg> Archives</a>
                 <ul class="dropdown-menu pt-0" id="dropdown_menu_archives">
-                  <li><a class="dropdown-item text-center" href="/Index/Archives/2016-2018.html">2016 - 2018</a></li>
-                  <li><a class="dropdown-item text-center" href="/Index/Archives/2011-2015.html">2011 - 2015</a></li>
+                  <li><a class="dropdown-item text-center" href="/AMCO/Archives/2016-2018.html">2016 - 2018</a></li>
+                  <li><a class="dropdown-item text-center" href="/AMCO/Archives/2011-2015.html">2011 - 2015</a></li>
                 </ul>
             </li>
         </ul>
@@ -129,59 +131,123 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> 
     <main>
-      <div class="pictures mt-4">
-        <h1>Photos</h1>
+      <div class="club my-4">
+        <h1>Le club</h1>
         <div class="wrapper mx-1">
           <article>
+            <!--creation club -->
+            <div class="row "> 
+              <div class="col">
+                <section class="creation_club">
+                  <div class="card">
+                    <h2 class="card-header">Création du club</h2>
+                    <div class="card-body mt-2 pt-2">
+                      <p class="card-text">Le club a été créé en 2001 sous l'appellation MKC, affilié à la Fédération UFOLEP depuis sa création.</p>
+                      <p class="card-text">Après plusieurs mutations il est devenu depuis l'Assemblée Générale du 24 Octobre 2009 l'A.M.Q.A.P, fruit de la fusion du club avec des passionnés de Motos Anciennes et de Quad de la basse Ariège.</p>
+                    </div>
+                  </div>
+                </section>
+              </div>
+            </div>
+            <!--club modification-->
             <div class="row"> 
-              <section>
-                <p class="text-center font-weight-bold mx-3"> 
-                  <img height="60" src="/Annexe/Images/Icone/travaux-routiers.png" alt=""> <br> PAGE EN CONSTRUCTION <br>
-                  <img height="60" src="/Annexe/Images/Icone/travaux-routiers.png" alt="">
-                </p>
-              </section>
+              <div class="col">
+                <section class="modif_club">
+                  <div class="card">
+                    <h2 class="card-header">Modification du club</h2>
+                    <div class="card-body mt-2 pt-2">
+                      <p class="card-text">Suite à l'AG extraordinaire l'association à été scindée en 2 parties distinctes mais complémentaire, avec 2 bureaux différents d'où les 2 appellations.</p>
+                      <p class="card-text text-decoration-underline"><strong>Tarif adhésion club
+                      </strong>:</p>
+                      <p class="card-text"><strong><mark>20€</mark></strong> que ça soit FFM ou UFOLEP, une seule cotisation club si le pilote prends les 2 licences dans la même entité.</p>
+                      <p class="card-text"> Concernant le challenge UFOLEP vous trouverez toutes les informations sur le site
+                        <a href="http://www.ufocross.caubet.eu/"> Ufocross.</a>
+                      </p>
+                    </div>
+                  </div>
+                </section>
+              </div>
+            </div>
+            <!--statuts of club-->
+            <div class="row"> 
+              <div class="col">
+                <section class="statuts_club">
+                  <div class="card">
+                    <h2 class="card-header text-danger text-uppercase">📜 Les statuts du club 📜</h2>
+                    <div class="card-body">
+                      <ul class="list-group">
+                        <li class="list-group-item mx-auto">
+                          <h3>Président :</h3>
+                          <p><b>SAINT-JOLY</b> Jean pierre <a href="mailto:j.pierrejoly@sfr.fr">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-envelope" viewbox="0 0 16 16"><path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/></svg></a>
+                          </p>
+                        </li>
+                        <li class="list-group-item mx-auto">
+                          <h3>Vices Président :</h3>
+                          <p><b>PEREZ</b> Louis <br> & <br> <b>VERGE</b> Gérard </p>
+                        </li>
+                        <li class="list-group-item mx-auto">
+                          <h3>Trésorier :</h3>
+                          <p><b>SAINT-JOLY</b> Stéphan <a href="mailto:migdle@hotmail.com">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-envelope" viewbox="0 0 16 16"><path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/></svg></a>
+                          </p>
+                        </li>
+                        <li class="list-group-item mx-auto">
+                          <h3>Secrétaire :</h3>
+                          <p><b>VERGE</b> Elisabeth</p>
+                        </li>
+                        <li class="list-group-item mx-auto">
+                          <h3>Conseillers Technique :</h3>
+                          <p><b>VIGNAUX</b> Michel <br> & <br> <b>GIROLA</b> Joël</p>
+                        </li>
+                        <li class="list-group-item mx-auto">
+                          <h3>Formateur :</h3>
+                          <p><b>VERGE</b> Gérard</p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </section>
+              </div>
             </div>
           </article>
         </div>
       </div>
     </main>
-    <!--FOOTER-->
-    <footer class="footer bg-dark text-light">
-      <div class="container pt-2">
-        <div class="row d-flex ">
-          <div class="col-6">
-            <div class="contact text-center">
-              <span>Retrouvez-nous sur :</span>
-              <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895 " target="blank"><img src="/Annexe/Images/Icone/Facebook.png" alt="" width="16" height="16">
-              </a> 
-            </div>
-          </div>
-          <div class="col-6">
-            <div class="form_contact text-center">
-              <span>Pour tout contact :</span>
-              <a href="/Index/contact.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle text-danger" viewbox="0 0 16 16">
-                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
-              </svg>
-              </a> 
-            </div>
+  <!--FOOTER-->
+    <footer class="footer container-fluid bg-dark text-light">
+    <div class="container pt-2">
+      <div class="row d-flex">
+        <div class="col-6">
+          <div class="contact text-center">
+            <span>Retrouvez-nous sur :</span>
+            <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895" target="blank"><img src="/Annexe/Images/Icone/Facebook.png" alt="" width="16" height="16">
+            </a> 
           </div>
         </div>
-        <div class="row justify-content-center pt-3">
-          <div class="col-12 text-center" id="copyright">
-            <p class="mb-1">Copyright @ <script>document.write(new Date().getFullYear());</script> by Micktar. Tous droits réservés.</p>
+        <div class="col-6">
+          <div class="form_contact text-center">
+            <span>Pour tout contact :</span>
+            <a href="/AMCO/contact.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle text-danger" viewbox="0 0 16 16">
+              <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+              <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
+            </svg>
+            </a> 
           </div>
         </div>
       </div>
+      <div class="row pt-3">
+        <div class="col-12 text-center" id="copyright">
+          <p class="mb-1">Copyright @ <script>document.write(new Date().getFullYear());</script> by Micktar. Tous droits réservés.</p>
+        </div>
+      </div>
+    </div>
     </footer>
   </div>
-  
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
-
-
