--- a/AMCO/contact.html
+++ b/AMCO/contact.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-dark bg-dark" id="Nav">
       <div class="row m-auto ">
         <div class="col">
-          <a class="text-warning mx-auto pb-2"  id="home" href="/index/accueil.html"> 
+          <a class="text-warning mx-auto pb-2"  id="home" href="/AMCO/index.html"> 
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-caret-left-square" viewbox="0 0 16 16">
               <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
               <path d="M10.205 12.456A.5.5 0 0 0 10.5 12V4a.5.5 0 0 0-.832-.374l-4.5 4a.5.5 0 0 0 0 .748l4.5 4a.5.5 0 0 0 .537.082z"/>
@@ -35,14 +35,14 @@
         <h2 class="text-center">Menu</h2>
         <ul class="list-unstyled mt-5">
             <li class="nav-item ">
-              <a class="nav-link" href="/Index/accueil.html">
+              <a class="nav-link" href="/AMCO/index.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewbox="0 0 16 16">
                   <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
                 </svg> Accueil
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Index/evenement.html"> 
+              <a class="nav-link" href="/AMCO/evenement.html"> 
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar3-event text-success" viewbox="0 0 16 16">
                   <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
                   <path d="M12 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
@@ -50,14 +50,14 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/Index/club.html">
+              <a class="nav-link" aria-current="page" href="/AMCO/club.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bicycle " viewbox="0 0 16 16">
                   <path d="M4 4.5a.5.5 0 0 1 .5-.5H6a.5.5 0 0 1 0 1v.5h4.14l.386-1.158A.5.5 0 0 1 11 4h1a.5.5 0 0 1 0 1h-.64l-.311.935.807 1.29a3 3 0 1 1-.848.53l-.508-.812-2.076 3.322A.5.5 0 0 1 8 10.5H5.959a3 3 0 1 1-1.815-3.274L5 5.856V5h-.5a.5.5 0 0 1-.5-.5zm1.5 2.443-.508.814c.5.444.85 1.054.967 1.743h1.139L5.5 6.943zM8 9.057 9.598 6.5H6.402L8 9.057zM4.937 9.5a1.997 1.997 0 0 0-.487-.877l-.548.877h1.035zM3.603 8.092A2 2 0 1 0 4.937 10.5H3a.5.5 0 0 1-.424-.765l1.027-1.643zm7.947.53a2 2 0 1 0 .848-.53l1.026 1.643a.5.5 0 1 1-.848.53L11.55 8.303z"/>
                 </svg> Le club
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Index/photos.html">
+              <a class="nav-link" href="/AMCO/photos.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-images" viewbox="0 0 16 16">
                   <path d="M4.502 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
                   <path d="M14.002 13a2 2 0 0 1-2 2h-10a2 2 0 0 1-2-2V5A2 2 0 0 1 2 3a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v8a2 2 0 0 1-1.998 2zM14 2H4a1 1 0 0 0-1 1h9.002a2 2 0 0 1 2 2v7A1 1 0 0 0 15 11V3a1 1 0 0 0-1-1zM2.002 4a1 1 0 0 0-1 1v8l2.646-2.354a.5.5 0 0 1 .63-.030l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094l1.777 1.947V5a1 1 0 0 0-1-1h-10z"/>
@@ -69,8 +69,8 @@
                 <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
                 </svg> Archives</a>
                 <ul class="dropdown-menu pt-0" id="dropdown_menu_archives">
-                  <li><a class="dropdown-item text-center" href="/Index/Archives/2016-2018.html">2016 - 2018</a></li>
-                  <li><a class="dropdown-item text-center" href="/Index/Archives/2011-2015.html">2011 - 2015</a></li>
+                  <li><a class="dropdown-item text-center" href="/AMCO/Archives/2016-2018.html">2016 - 2018</a></li>
+                  <li><a class="dropdown-item text-center" href="/AMCO/Archives/2011-2015.html">2011 - 2015</a></li>
                 </ul>
             </li>
         </ul>
@@ -159,7 +159,7 @@
                           <div class="form-check-inline">
                             <input class="form-check-input" type="checkbox" id="condition_check" required>
                             <label class="form-check-label" for="condition_check">
-                              <a href="/Index/conditions.html" target="blank" id="condition_accept">Lire et accepter les conditions</a> 
+                              <a href="/AMCO/conditions.html" target="blank" id="condition_accept">Lire et accepter les conditions</a> 
                             </label>
                             <div class="invalid-feedback">
                               Vous devez accepter les conditions avant de valider.
